--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="heading">
+      <h1>Chetan is here</h1>
+    </div>
 
     <script
       crossorigin
@@ -17,7 +19,7 @@
       crossorigin
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script>
-    <script src="app.js"></script>
+    <script  type= "module" src="app.js"></script>
       
     </script>
   </body>
